day2/python_repl_try1.txt
jlin@oregano ~ % python
Python 3.12.12 (main, Oct  9 2025, 11:07:00) [Clang 17.0.0 (clang-1700.3.19.1)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import re
>>> text = "abcabc"
>>> pattern = pattern = r'(\w+)\1+'
>>>
KeyboardInterrupt
>>> pattern = r'(\w+)\1+'
>>> matches = re.findall(pattern,text)
>>> print (matches)
['abc']
>>> text  = "11"
>>> matches = re.findall(pattern,text)
>>> text  = "11"
>>> print (matches)
['1']
>>> text  = "12"
>>> matches = re.findall(pattern,text)
>>> print (matches)
[]
>>> numbers = list(range(11,22))
>>> print numbers
  File "<stdin>", line 1
    print numbers
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
>>> print(numbers)
[11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
>>> numbers = list(range(11,23))
>>> print(numbers)
[11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
>>> output_array = [re.findall(pattern, element) for element in numbers]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/opt/homebrew/Cellar/python@3.12/3.12.12/Frameworks/Python.framework/Versions/3.12/lib/python3.12/re/__init__.py", line 217, in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: expected string or bytes-like object, got 'int'
>>> [str(i) for i in numbers]
['11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22']
>>> output_array = [re.findall(pattern, element) for element in numbers]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/opt/homebrew/Cellar/python@3.12/3.12.12/Frameworks/Python.framework/Versions/3.12/lib/python3.12/re/__init__.py", line 217, in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: expected string or bytes-like object, got 'int'
>>> output_array = [re.findall(pattern, element) for element in numbers]
KeyboardInterrupt
>>> input_array =  [str(i) for i in numbers]
>>> output_array = [re.findall(pattern, element) for element in input_array]
>>> print output_array
  File "<stdin>", line 1
    print output_array
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
>>> print (output_array)
[['1'], [], [], [], [], [], [], [], [], [], [], ['2']]
>>>